--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build web --configuration $(buildConfiguration)
+- script: dotnet build ./web --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
