--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,6 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet restore ./web
+- script: ls
 - script: dotnet build ./web --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
