--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,5 +14,5 @@ variables:
 
 steps:
 - script: ls
-- script: dotnet build ./web --configuration $(buildConfiguration)
+- script: dotnet build ./Web --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
