編集画面(削除・エクスポート)追加

--- a/Web/SwingDataViewer/appsettings.Development.json
+++ b/Web/SwingDataViewer/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "Jwt": {
+    "Key": "token-ver-fc99851e-c769-4d29-99ac-21892288b58c",
+    "Issuer": "https://swingdataviewere/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
