--- a/Web/SwingDataViewer/bundleconfig.json
+++ b/Web/SwingDataViewer/bundleconfig.json
@@ -3,7 +3,8 @@
     "outputFileName": "wwwroot/css/site.min.css",
     "inputFiles": [
       "wwwroot/css/site.css",
-      "wwwroot/css/graph.css"
+      "wwwroot/css/graph.css",
+      "wwwroot/css/stat.css"
     ]
   },
   {
